# VPDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json
VideoPlayer/: CMakeLists.txt  Main.cpp
cmake/: env.cmake  util.cmake
